kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        service: backend
    spec:
      containers:
      - env:
        - name: RDS_URL
          value: 
        - name: DATABASE_URI
          value: $DATABASE_URI
        - name: SECRET_KEY
          value: $SECRET_KEY
        - name: MYSQL_ROOT_PASSWORD
          value: $MYSQL_ROOT_PASSWORD
        - name: TEST_DATABASE_URI
          value: $TEST_DATABASE_URI
        image: [dockerhub]
        imagePullPolicy: Always
        name: backend
        resources: {}
        ports:
        - containerPort: 5001
          protocol: TCP
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
