kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: backend
  name: backend
spec:
  type: LoadBalancer
  ports:
  - name: backend
    port: 80
    targetPort: 5001
    nodePort: 32080
  selector:
    service: backend
