kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  type: LoadBalancer
  ports:
  - name: frontend
    port: 80
    targetPort: 5000
  selector:
    service: frontend
