kubernetes/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /backend
        backend:
          serviceName: backend
          servicePort: 5001
      - path: /
        backend:
          serviceName: frontend
          servicePort: 5000
